--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,7 @@
     &_block {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         justify-content: space-between;
     }
 
@@ -22,6 +23,7 @@
         margin-left: 148px;
 
         &_item {
+            display: inline-block;
             color: $text-color;
             text-decoration: none;
             transition: color 0.2s ease-in-out;
@@ -38,6 +40,7 @@
     
     &_login {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         &_item {
             margin-right: 20px;
@@ -224,14 +227,14 @@
     &_blocks {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         justify-content: space-between;
         margin-bottom: 90px;
     }
 
     &_block {
         position: relative;
-        max-width: 415px;
-        width: 100%;
+        width: 415px;
         max-height: 315px;
         height: 100%;
         text-align: center;
@@ -353,9 +356,9 @@
     &_title {
         font-weight: 700;
         font-size: 58px;
-        line-height: 20px;
+        line-height: 55px;
         color: $main-color;
-        margin-bottom: 60px;
+        margin-bottom: 30px;
         z-index: 3;
 
         &_active {
@@ -409,6 +412,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         margin-bottom: 256px;
     }
 
@@ -430,16 +434,17 @@
     &_blocks {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         margin-bottom: 74px;
     }
 
     &_block {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
         max-width: 442px;
-        height: 468px;
+        min-width: 408px;
         width: 100%;
+        height: 468px;
         background: $grey;
         border-radius: 30px;
         padding: 0 30px 50px;
@@ -588,6 +593,7 @@
         width: 100%;
         padding-top: 50px;
         background-color: $grey;
+        z-index: -99999;
     }
 
     &_col-1 {
@@ -610,8 +616,9 @@
 
     &_bg {
         position: absolute;
-        top: -160px;
-        right: -180px;
+        top: -170px;
+        right: 65px;
+        overflow: hidden;
     }
 
     .bg-item_left_bottom {
@@ -760,7 +767,7 @@
     &_payment_icons {
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: flex-start;
     }
 
     &_payment_icon {
@@ -771,3 +778,5 @@
         right: 0;
     }
 }
+
+@import "_media.scss";
